:art: Fixed Modal view on mobile:

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -306,6 +306,10 @@ input[type="checkbox"]:focus {
   // overflow-y: scroll;
   animation: transform 0.3s 0.025s ease-out forwards;
 
+  @media (max-width: 700px) {
+    max-width: 85%;
+  }
+
   textarea {
     appearance: none;
     user-select: none;
